--- a/tests/unit/editors/AriaRendering/tests.html
+++ b/tests/unit/editors/AriaRendering/tests.html
@@ -1,15 +1,17 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
-	<meta charset="UTF-8" />
 	<title>Infragistics jQuery Client Editors - List items example </title>
+	<meta charset="UTF-8" />
 	<link type="text/css" href="../../../../src/css/themes/infragistics/infragistics.theme.css" rel="stylesheet" />
+	<link type="text/css" href="../../../../src/css/structure/modules/infragistics.ui.shared.css" rel="stylesheet" />
 	<link type="text/css" href="../../../../src/css/structure/modules/infragistics.ui.popover.css" rel="stylesheet" />
 	<link type="text/css" href="../../../../src/css/structure/modules/infragistics.ui.notifier.css" rel="stylesheet" />
 	<link type="text/css" href="../../../../src/css/structure/modules/infragistics.ui.editors.css" rel="stylesheet" />
 
-	<script type="text/javascript" src="../../../../bower_components/jquery/dist/jquery.js"></script>
-	<script type="text/javascript" src="../../../../bower_components/jquery-ui/jquery-ui.js"></script>
+	<!-- <script type="text/javascript" src="../../../../bower_components/jquery/dist/jquery.js"></script>
+	<script type="text/javascript" src="../../../../bower_components/jquery-ui/jquery-ui.js"></script> -->
 
 	<script type="text/javascript" src="../../../../src/js/modules/i18n/infragistics.ui.popover-en.js"></script>
 	<script type="text/javascript" src="../../../../src/js/modules/i18n/infragistics.ui.notifier-en.js"></script>
@@ -19,193 +21,152 @@
 	<script type="text/javascript" src="../../../../src/js/modules/infragistics.util.jquery.js"></script>
 	<script type="text/javascript" src="../../../../src/js/modules/infragistics.ui.widget.js"></script>
 	<script type="text/javascript" src="../../../../src/js/modules/infragistics.ui.popover.js"></script>
-	<script type="text/javascript" src="../../../../src/js/modules/infragistics.ui.notifier.js"></script>                                    
-	<script type="text/javascript" src="../../../../src/js/modules/infragistics.ui.editors.js"></script> 
-	
+	<script type="text/javascript" src="../../../../src/js/modules/infragistics.ui.notifier.js"></script>
+	<script type="text/javascript" src="../../../../src/js/modules/infragistics.ui.editors.js"></script>
+
 	<link type="text/css" href="../../../../bower_components/qunit/qunit/qunit.css" rel="stylesheet" media="screen" />
 	<script type="text/javascript" src="../../../../bower_components/qunit/qunit/qunit.js"></script>
 
 	<script type="text/javascript">
-	/*global window, setTimeout, $, startTesting, QUnit, module, test, ok, equals*/
-	$(document).ready(function () {
-		// Create a editors
-		function loadTestbeds() {
-			$(function () {
-				var listData = []
-				for (var i = 1; i < 20; i++) {
-					listData.push("item" + i);
-				}
-				$("#divEditor").igTextEditor({
-					buttonType: "dropdown,spin,clear",
-					width: 400,
-					placeHolder: "Enter Text",
-					listItems: ["item1", "item2", "item3", "item4", "item5", "item6", "item7"]
-				});
-				$("#divEditor1").igCurrencyEditor({
-					buttonType: "dropdown,spin,clear",
-					width: 400,
-					tabIndex: -1,
-					placeHolder: "Enter Currency",
-					listItems: ["item1", "item2"]
-				});
-				$("#divEditor2").igDateEditor({
-					buttonType: "spin,clear",
-					placeHolder: "Enter Date",
-					width: 400
-				});
-				$("#divEditor3").igDatePicker({
-					buttonType: "dropdown,spin,clear",
-					placeHolder: "Select Date",
-					width: 400
-				});
+		QUnit.module("igEditors ARIA rendering", {
+			divTag: '<div></div>',
 
-				$("#changeUSLocale").click(function () {
-					$("#divEditor3").igDatePicker("option", "locale", {
-						datePickerButtonTitle: "New DD Title",
-						spinUpperTitle: "New SU Title",
-						spinLowerTitle: "New SL Title"
-					});
-				});
+			beforeEach: function () { },
 
-				$("#divEditor4").igMaskEditor({
-					buttonType: "clear",
-					placeHolder: "Fill Mask",
-					width: 400,
-
-				});
-				$("#divEditor5").igNumericEditor({
-					buttonType: "dropdown,spin,clear",
-					placeHolder: "Enter Number",
-					width: 400,
-					listItems: [1, 2, 3]
-				});
-				$("#divEditor6").igPercentEditor({
-					buttonType: "dropdown,spin,clear",
-					placeHolder: "Enter Percent",
-					width: 400,
-					listItems: [1, 2, 3, 4, 5, 6, 7, 8, 43, 43, 23, 2, 32, 3, 2]
-				});
-				
-			});
-		}
-
-		initialized = false;
-		module("igEditors ARIA rendering", {
-			setup: function() {
-				//pause testing until editors are initialized
-				if (!initialized) {
-					stop();
-					loadTestbeds();
-					setTimeout(function () { start(); }, 100);
-					initialized = true;
-				}
-			},
-			teardown: function () {
-				
-			}
+			afterEach: function () { },
 		});
-		
-		var testId = 'Aria Rendering';
-		test(testId, 28, function () {
-			var dropDownButton, clearButton, spinUpButton, spinDownButton, ddlist, listitem;
-			dropDownButton = $("#divEditor").data("igTextEditor")._dropDownButton;
 
-			equal(dropDownButton.attr("role"), "button", "role='button' attribute is not rendered");
-			equal(dropDownButton.attr("title"), $("#divEditor").data("igTextEditor")._getLocaleValue("buttonTitle"), "The title attribute should be: " + $("#divEditor").data("igTextEditor")._getLocaleValue("buttonTitle"));
-			equal(dropDownButton.attr("id"), "divEditor_dropDownButton", "The id of the dropDownButton should be divEditor_dropDownButton");
+		QUnit.test('Aria Rendering', function (assert) {
+			assert.expect(28);
+
+			var igTextEditorId = "#igTextEditor",
+				$igTextEditor = $.ig.TestUtil.appendToFixture(this.divTag, { id: igTextEditorId }),
+				igCurrencyEditorId = "#igCurrencyEditor",
+				$igCurrencyEditor = $.ig.TestUtil.appendToFixture(this.divTag, { id: igCurrencyEditorId }),
+				$igDateEditor = $.ig.TestUtil.appendToFixture(this.divTag, { id: "igGateEditorId" }),
+				$igDatePicker = $.ig.TestUtil.appendToFixture(this.divTag, { id: "igDatePickerId" }),
+				$igMaskEditor = $.ig.TestUtil.appendToFixture(this.divTag, { id: "igMaskEditorId" }),
+				$igNumericEditor = $.ig.TestUtil.appendToFixture(this.divTag, { id: "igNumericEditorId" }),
+				$igPercentEditor = $.ig.TestUtil.appendToFixture(this.divTag, { id: "igPercentEditorId" }),
+				$dropDownButton,
+				$clearButton,
+				$spinUpButton,
+				$spinDownButton,
+				$ddlist,
+				$listitem;
+
+			$igTextEditor.igTextEditor({
+				buttonType: "dropdown, spin, clear",
+				listItems: ["item1", "item2", "item3", "item4", "item5", "item6", "item7"]
+			});
+
+			$igCurrencyEditor.igCurrencyEditor({
+				buttonType: "dropdown,spin,clear",
+				tabIndex: -1,
+				listItems: ["item1", "item2"]
+			});
+
+			$igDateEditor.igDateEditor({
+				buttonType: "spin,clear",
+			});
+
+			$igDatePicker.igDatePicker({
+				buttonType: "dropdown,spin,clear",
+			});
+
+			$igMaskEditor.igMaskEditor({
+				buttonType: "clear",
+			});
+
+			$igNumericEditor.igNumericEditor({
+				buttonType: "dropdown,spin,clear",
+				listItems: [1, 2, 3]
+			});
+
+			$igPercentEditor.igPercentEditor({
+				buttonType: "dropdown,spin,clear",
+				listItems: [1, 2, 3, 4, 5, 6, 7, 8, 43, 43, 23, 2, 32, 3, 2]
+			});
+
+			$dropDownButton = $igTextEditor.data("igTextEditor")._dropDownButton;
+			assert.equal($dropDownButton.attr("role"), "button", "role='button' attribute is not rendered");
+			assert.equal($dropDownButton.attr("title"), $.ig.Editor.locale.buttonTitle, "Button title attribute be is not correct");
+			assert.equal($dropDownButton.attr("id"), igTextEditorId + "_dropDownButton", "The id of the dropDownButton should be " + igTextEditorId + "_dropDownButton");
+
 			// Bug 214846:igGrid Paging dropdown in the header has negative tabindex
 			// Make sure tabIndex is only applied when set
-			equal($("#divEditor").igTextEditor("field").attr("tabIndex"), undefined, "Input not rendered with default tab index");
-			equal($("#divEditor1").igCurrencyEditor("field").attr("tabIndex"), "-1", "Input not rendered with set tab index");
+			assert.equal($igTextEditor.igTextEditor("field").attr("tabIndex"), undefined, "Input not rendered with default tab index");
+			assert.equal($igCurrencyEditor.igCurrencyEditor("field").attr("tabIndex"), "-1", "Input not rendered with set tab index");
 
-			clearButton = $("#divEditor").data("igTextEditor")._clearButton;
-			equal(clearButton.attr("role"), "button", "role='button' attribute is not rendered");
-			equal(clearButton.attr("title"), $("#divEditor").data("igTextEditor")._getLocaleValue("clearTitle"), "The title attribute should be: " + $("#divEditor").data("igTextEditor")._getLocaleValue("clearTitle"));
-			equal(clearButton.attr("id"), "divEditor_clearButton", "The id of the clearButton should be divEditor_clearButton");
-			spinUpButton = $("#divEditor").data("igTextEditor")._spinUpButton;
-			equal(spinUpButton.attr("role"), "button", "role='button' attribute is not rendered");
-			equal(spinUpButton.attr("title"), $("#divEditor").data("igTextEditor")._getLocaleValue("spinUpperTitle"), "The title attribute should be: " + $("#divEditor").data("igTextEditor")._getLocaleValue("spinUpperTitle"));
-			equal(spinUpButton.attr("id"), "divEditor_spinUpButton", "The id of the spinUpButton should be divEditor_spinUpButton");
-			spinDownButton = $("#divEditor").data("igTextEditor")._spinDownButton;
-			equal(spinDownButton.attr("role"), "button", "role='button' attribute is not rendered");
-			equal(spinDownButton.attr("title"), $("#divEditor").data("igTextEditor")._getLocaleValue("spinLowerTitle"), "The title attribute should be: " + $("#divEditor").data("igTextEditor")._getLocaleValue("spinLowerTitle"));
-			equal(spinDownButton.attr("id"), "divEditor_spinDownButton", "The id of the spinDownButton should be divEditor_spinDownButton");
-			ddlist = $("#divEditor").data("igTextEditor")._dropDownList;
-			equal(ddlist.attr("id"), "divEditor_list", "The list id should be divEditor_list");
-			equal(ddlist.attr("role"), "listbox", "The dropdown role should be listbox");
-			equal(ddlist.attr("aria-activedescendant"), "divEditorEditingInput", "THe aria-activedescendant should be equal to the editor ID= " + ddlist.attr("aria-activedescendant"));
-			listitem = ddlist.children(".ui-igedit-listitem")[3];
-			listitem = $(listitem);
-			equal(listitem.attr("role"), "option", "The item should have role option");
-			equal(listitem.attr("aria-selected"), "false", "The aria-selected attribute should be false");
-			equal(listitem.attr("aria-posinset"), "4", "The arin-posinset attribute should be 4");
-			equal(listitem.attr("title"), "item4", "The title of the item should be item4");
+			$clearButton = $igTextEditor.data("igTextEditor")._clearButton;
+			assert.equal($clearButton.attr("role"), "button", "role='button' attribute is not rendered");
+			assert.equal($clearButton.attr("title"), $.ig.Editor.locale.clearTitle, "Clear title attribute is not correct");
+			assert.equal($clearButton.attr("id"), igTextEditorId + "_clearButton", "The id of the clearButton should be " + igCurrencyEditorId + "_clearButton");
+
+			$spinUpButton = $igTextEditor.data("igTextEditor")._spinUpButton;
+			assert.equal($spinUpButton.attr("role"), "button", "role='button' attribute is not rendered");
+			assert.equal($spinUpButton.attr("title"), $.ig.Editor.locale.spinUpperTitle, "Spin upper title attribute is not correct");
+			assert.equal($spinUpButton.attr("id"), igTextEditorId + "_spinUpButton", "The id of the spinUpButton should be " + igTextEditorId + "_spinUpButton");
+
+			$spinDownButton = $igTextEditor.data("igTextEditor")._spinDownButton;
+			assert.equal($spinDownButton.attr("role"), "button", "role='button' attribute is not rendered");
+			assert.equal($spinDownButton.attr("title"), $.ig.Editor.locale.spinLowerTitle, "Spin lower title attribute is not correct");
+			assert.equal($spinDownButton.attr("id"), igTextEditorId + "_spinDownButton", "The id of the spinDownButton should be " + igTextEditorId + "spinDownButton");
+
+			$ddlist = $igTextEditor.data("igTextEditor")._dropDownList;
+			assert.equal($ddlist.attr("role"), "listbox", "The dropdown role should be listbox");
+			assert.equal($ddlist.attr("aria-activedescendant"), igTextEditorId + "EditingInput", "The aria-activedescendant should be equal to the editor ID= " + igTextEditorId + "EditingInput");
+			assert.equal($ddlist.attr("id"), igTextEditorId + "_list", "The list id should be " + igTextEditorId + "list");
+
+			$listitem = $($ddlist.children(".ui-igedit-listitem")[3]);
+			assert.equal($listitem.attr("role"), "option", "The item should have role option");
+			assert.equal($listitem.attr("aria-selected"), "false", "The aria-selected attribute should be false");
+			assert.equal($listitem.attr("aria-posinset"), "4", "The arin-posinset attribute should be 4");
+			assert.equal($listitem.attr("title"), "item4", "The title of the item should be item4");
+
 			//AriaLabelText for all editors. 
-			equal($("#divEditor").igTextEditor("field").attr("aria-label"),
-				$("#divEditor").data("igTextEditor")._getLocaleValue("ariaTextEditorFieldLabel"),
-				"The aria-label should be: " + $("#divEditor").data("igTextEditor")._getLocaleValue("ariaTextEditorFieldLabel"));
-			equal($("#divEditor1").igCurrencyEditor("field").attr("aria-label"),
-				$("#divEditor1").data("igCurrencyEditor")._getLocaleValue("ariaCurrencyEditorFieldLabel"),
-				"The aria-label should be: " + $("#divEditor1").data("igCurrencyEditor")._getLocaleValue("ariaCurrencyEditorFieldLabel"));
-			equal($("#divEditor2").igDateEditor("field").attr("aria-label"),
-				$("#divEditor2").data("igDateEditor")._getLocaleValue("ariaDateEditorFieldLabel"),
-				"The aria-label should be: " + $("#divEditor2").data("igDateEditor")._getLocaleValue("ariaDateEditorFieldLabel"));
-			equal($("#divEditor3").igDatePicker("field").attr("aria-label"),
-				$("#divEditor3").data("igDatePicker")._getLocaleValue("ariaDatePickerFieldLabel"),
-				"The aria-label should be: " + $("#divEditor3").data("igDatePicker")._getLocaleValue("ariaDatePickerFieldLabel"));
-			equal($("#divEditor4").igMaskEditor("field").attr("aria-label"),
-				$("#divEditor4").data("igMaskEditor")._getLocaleValue("ariaMaskEditorFieldLabel"),
-				"The aria-label should be: " + $("#divEditor4").data("igMaskEditor")._getLocaleValue("ariaMaskEditorFieldLabel"));
-			equal($("#divEditor5").igNumericEditor("field").attr("aria-label"),
-				$("#divEditor5").data("igNumericEditor")._getLocaleValue("ariaNumericEditorFieldLabel"),
-				"The aria-label should be: " + $("#divEditor5").data("igNumericEditor")._getLocaleValue("ariaNumericEditorFieldLabel"));
-			equal($("#divEditor6").igPercentEditor("field").attr("aria-label"),
-				$("#divEditor6").data("igPercentEditor")._getLocaleValue("ariaPercentEditorFieldLabel"),
-				"The aria-label should be: " + $("#divEditor6").data("igPercentEditor")._getLocaleValue("ariaPercentEditorFieldLabel"));
-		});
-		testId = 'Aria List Rendering';
-		test(testId, 0, function () {
-
+			assert.equal($igTextEditor.igTextEditor("field").attr("aria-label"), $.ig.Editor.locale.ariaTextEditorFieldLabel,
+				"igTextEditor's aria-label is not correct");
+			assert.equal($igCurrencyEditor.igCurrencyEditor("field").attr("aria-label"), $.ig.Editor.locale.ariaCurrencyEditorFieldLabel, "igCurrencyEditor's aria-label should is not correct");
+			assert.equal($igDateEditor.igDateEditor("field").attr("aria-label"), $.ig.Editor.locale.ariaDateEditorFieldLabel, "idDateEditor's aria-label is not correct");
+			assert.equal($igDatePicker.igDatePicker("field").attr("aria-label"), $.ig.Editor.locale.ariaDatePickerFieldLabel, "igDatePicker's aria-label is not correct");
+			assert.equal($igMaskEditor.igMaskEditor("field").attr("aria-label"), $.ig.Editor.locale.ariaMaskEditorFieldLabel, "$.ig.Editor.locale.'s aria-label is not correct");
+			assert.equal($igNumericEditor.igNumericEditor("field").attr("aria-label"), $.ig.Editor.locale.ariaNumericEditorFieldLabel, "igNumericEditor's aria-label is not correct");
+			assert.equal($igPercentEditor.igPercentEditor("field").attr("aria-label"), $.ig.Editor.locale.ariaPercentEditorFieldLabel, "igPercentEditor's aria-label is not correct");
 		});
 
-		testId = "Change locale";
-		test(testId, 3, function () {
-			$("#changeUSLocale").click();
-			equal($("#divEditor3").find("#divEditor3_calendarButton").attr("title"), "New DD Title", "The Drop Down title locale didn't change");
-			equal($("#divEditor3").find("#divEditor3_spinUpButton").attr("title"), "New SU Title", "The Spin Up title locale didn't change");
-			equal($("#divEditor3").find("#divEditor3_spinDownButton").attr("title"), "New SL Title", "The Spin Down title locale didn't change");
+		QUnit.test('Aria List Rendering', function (assert) {
+			assert.expect(0);
 		});
-	});
+
+		QUnit.test("Change locale", function (assert) {
+			assert.expect(3);
+
+			var igDatePickerId = "igDatePickerId",
+				$igDatePicker = $.ig.TestUtil.appendToFixture(this.divTag, { id: igDatePickerId }),
+				$buttonCnangeUSLocale = $.ig.TestUtil.appendToFixture("<button></button>");
+
+			$igDatePicker.igDatePicker({
+				buttonType: "dropdown,spin,clear",
+				placeHolder: "Select Date",
+				width: 400
+			});
+
+			$buttonCnangeUSLocale.click(function () {
+				$igDatePicker.igDatePicker("option", "locale", {
+					datePickerButtonTitle: "New DD Title",
+					spinUpperTitle: "New SU Title",
+					spinLowerTitle: "New SL Title"
+				});
+			});
+
+			$buttonCnangeUSLocale.click();
+
+			assert.equal($igDatePicker.find("#" + igDatePickerId + "_calendarButton").attr("title"), "New DD Title", "The Drop Down title locale didn't change");
+			assert.equal($igDatePicker.find("#" + igDatePickerId + "_spinUpButton").attr("title"), "New SU Title", "The Spin Up title locale didn't change");
+			assert.equal($igDatePicker.find("#" + igDatePickerId + "_spinDownButton").attr("title"), "New SL Title", "The Spin Down title locale didn't change");
+		});
 	</script>
-
 </head>
-<body>
-<div style="float:right;width:400px;overflow:auto">
-	 <h1 id="qunit-header">Test results</h1>
-	 <h2 id="qunit-banner"></h2>
-	 <h2 id="qunit-userAgent"></h2>
-	 <ol id="qunit-tests"></ol>
-</div>
-<div style="float:left;overflow:auto;padding:20px;position:absolute;width:500px; height:100%">
-	<br />
-	<div id="divEditor">
-	</div>
-	<div id="divEditor1">
-	</div>
-	<div id="divEditor2">
-	</div>
-	<div id="divEditor3">
-	</div>
-	<button id="changeUSLocale">Change Locale</button>
-	<div id="divEditor4">
-	</div>
-	<div id="divEditor5">
-	</div>
-	<div id="divEditor6">
-	</div>
-	<div id="divEditor7">
-	</div>
-</div>
-</body>
-</html>
 
+</html>
